[package]
name = "randem"
version = "0.1.0"
edition = "2021"
description = "Print a random emoji optionally with the given string as seed"
license = "MIT"
homepage = "https://github.com/iesahin/randem"

[dependencies]

emoji = "^0.2"
clap = { version = "^4.5", features = ["derive", "cargo"] }
rand = "^0.8"
